--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   <meta name="description" content="Java Backend Engineer with 3+ years experience in Spring Boot, Microservices, Hibernate, REST, SQL, Docker.">
   <meta name="keywords" content="Java, Spring Boot, Hibernate, Microservices, REST, SQL, Docker, Backend Engineer, HCLTech">
   <meta property="og:title" content="Rupam Kumar — Java Backend Engineer">
-  <meta property="og:description" content="I build secure, scalable Java microservices that cut latency and ship faster.">
+  <meta property="og:description" content="I’m Rupam Kumar, a Java Backend Engineer with over three years of experience building secure, scalable, and high‑performance applications. My work focuses on designing and delivering microservices using Java 8/14/17, Spring Boot, Hibernate, and REST APIs, with a strong emphasis on clean architecture and measurable results.
+I’ve contributed to enterprise‑level projects such as:
+- BCBSRI Full‑Stack Microservices — Developed and maintained multiple services with Eureka discovery, Angular/JSP frontends, and secure configuration management using Spring Vault.
+- TOSCANA T3 BPM Tool — Built REST APIs, implemented automated testing with JUnit and Cucumber, and collaborated in an Agile team to improve release quality and speed.
+- Auth & Reporting Services — Delivered authentication with JWT/OAuth2, optimized database performance with Redis caching, and documented APIs with OpenAPI.
+I hold certifications in Microsoft Azure Fundamentals and Spring Boot, and have been recognized with HCL Tech’s Shining Award (2024) and Best Performer Award (2025) for delivering impactful, reliable solutions.
+Core Skills: Java, Spring Boot, Spring Cloud, Hibernate/JPA, MySQL, PostgreSQL, MongoDB, Docker, Jenkins, AWS, Azure DevOps, Angular, Bootstrap, HTML/CSS.
+">
   <meta property="og:image" content="assets/rupam.jpg">
   <link rel="icon" href="assets/rupam.jpg">
 
